// file: pkg/config/proto/rotation_event.proto
// version: 1.0.0
// guid: b7c8d9e0-1f23-4567-1234-789012345678

edition = "2023";

package gcommon.v1.config;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/jdfalk/gcommon/pkg/config/proto";

message RotationEvent {
  // Event ID
  string id = 1;

  // Rotation timestamp
  google.protobuf.Timestamp timestamp = 2;

  // Previous value
  string previous_value = 3;

  // New value
  string new_value = 4;

  // Rotation reason
  string reason = 5;
}
